# ddns-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  ddns.example.toml  ddns.toml  docker-compose.yaml
.github/workflows/: docker.yaml  release.yaml
crates/ddns/: Cargo.toml  README.md
crates/ddns-core/: Cargo.toml  README.md
crates/ddns-core/src/: cfg.rs  dashboard.html  detector.rs  error.rs  http.rs  lib.rs  login.html  scheduler.rs  status.rs
crates/ddns-provider/: Cargo.toml  README.md
crates/ddns-provider-aliyun/: Cargo.toml  README.md
crates/ddns-provider-aliyun/src/: lib.rs
crates/ddns-provider-cloudflare/: Cargo.toml  README.md
crates/ddns-provider-cloudflare/src/: lib.rs
crates/ddns-provider/src/: lib.rs
crates/ddns/src/: main.rs
deploy/docker/: README.md
deploy/k8s/: README.md  ddns-rs.yaml
