[workspace]
resolver = "2"
members = [
    "crates/ddns",
    "crates/ddns-core",
    "crates/ddns-provider",
    "crates/ddns-provider-aliyun",
    "crates/ddns-provider-cloudflare",
]

[workspace.package]
authors = ["lvillis<lvillis@outlook.com>"]
homepage = "https://github.com/lvillis/ddns-rs"
repository = "https://github.com/lvillis/ddns-rs"
documentation = "https://github.com/lvillis/ddns-rs/blob/main/README.md"
edition = "2024"
rust-version = "1.87"
license = "MIT"
exclude = [
    "/docs/",
    "/tests/",
    "/.config/",
    "/.github/",
    "/.justfile",
    "/rust-toolchain.toml",
    "/.gitignore",
    "Dockerfile",
    "docker-compose.yaml"
]
keywords = ["ddns", "dns", "ddns-rs", "dynamic-dns", "cloudflare"]

[workspace.dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.41", default-features = false }
once_cell = "1.21.3"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal", "process"] }
tracing = "0.1.41"
thiserror = "2.0.16"

ddns-core = { path = "crates/ddns-core", version = "0.1", default-features = false }
ddns-provider = { path = "crates/ddns-provider", version = "0.1" }
ddns-provider-aliyun = { path = "crates/ddns-provider-aliyun", version = "0.1" }
ddns-provider-cloudflare = { path = "crates/ddns-provider-cloudflare", version = "0.1" }

[workspace.lints.clippy]
print_stdout = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[workspace.metadata.release]
shared-version = true
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "chore: release version {{version}}"
pre-release-commit-message = "chore: release version {{version}}"
pre-release-hook = ["git", "cliff", "--workdir", "../", "--output", "../../CHANGELOG.md", "--tag", "{{version}}"]
