[package]
name = "ddns-core"
description = "Runtime core for ddns-rs: scheduler, HTTP API and shared state."
version = "0.1.7"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
exclude = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = "0.8.6"
config = "0.15.16"
chrono = { workspace = true, features = ["serde", "clock"] }
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = "0.14.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = { workspace = true }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = { workspace = true }

jsonwebtoken = { version = "9.3.1", default-features = false }
futures-core = "0.3.31"
parking_lot = "0.12.4"
cron = { version = "0.15.0" }

ddns-provider = { workspace = true }

# optional
ddns-provider-aliyun = { workspace = true, optional = true }
ddns-provider-cloudflare = { workspace = true, optional = true }
toml = "0.9.7"

[target.'cfg(unix)'.dependencies]
pnet_datalink = "0.35.0"

[features]
default = []
ddns-provider-aliyun = ["dep:ddns-provider-aliyun"]
ddns-provider-cloudflare = ["dep:ddns-provider-cloudflare"]
