[package]
name = "ddns-provider-cloudflare"
description = "Cloudflare DNS provider for ddns-rs (A / AAAA record upsert)."
version = "0.1.5"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
exclude = { workspace = true }

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }

ddns-provider = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
