[package]
name = "ddns"
description = "Rust Dynamic-DNS (DDNS) daemon that detects your public IP and automatically upserts A/AAAA records on Cloudflare or custom providers, featuring a self-hosted web dashboard and zero external dependencies."
version = "0.1.4"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
exclude = { workspace = true }
readme = "../../README.md"
keywords = { workspace = true }
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "ddns"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.39", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

ddns-core = { workspace = true, features = ["ddns-provider-aliyun", "ddns-provider-cloudflare"] }

# optional
ddns-provider-aliyun = { workspace = true, optional = true }
ddns-provider-cloudflare = { workspace = true, optional = true }

[features]
default = ["ddns-provider-aliyun", "ddns-provider-cloudflare"]
ddns-provider-aliyun = ["dep:ddns-provider-aliyun", "ddns-core/ddns-provider-aliyun"]
ddns-provider-cloudflare = ["dep:ddns-provider-cloudflare", "ddns-core/ddns-provider-cloudflare"]
